--- a/src/pa-page-resource.html
+++ b/src/pa-page-resource.html
@@ -33,20 +33,11 @@
       data="{{tabs}}">
     </firebase-query>
 
-    <firebase-query
-      path="[[_path(routeData.key, 'u')]]"
-      data="{{copies}}">
-    </firebase-query>
-
-    <template is="dom-repeat" items="[[copies]]" as="copy">
-      <firebase-document path="[[copy.n]]" data="[[resource]]">
-      </firebase-document>
-    </template>
-
     <iron-pages attr-for-selected="tab-key"
       selected="[[selectedTab]]">
 
-      <pa-page-property-list tab-key="" resource="{{resource}}">
+      <pa-page-property-list tab-key="" resource-key="[[routeData.key]]"
+        resource="[[resource]]">
       </pa-page-property-list>
 
       <template is="dom-repeat" items="[[tabs]]" as="tab">
