--- a/src/pa-app.html
+++ b/src/pa-app.html
@@ -123,7 +123,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <a href="/resource/basil-pupken/partners">Partners</a>
             <a href="/resource/basil-pupken/offers">Offers</a>
             <a href="/resource/basil-pupken/contracts">Contracts</a>
-            <a href="/resource/admin/">System</a>
+            <a href="/resource/admin/">Site Builder</a>
           </iron-selector>
         </app-header-layout>
       </app-drawer>
