attachments as pics

--- a/src/pa-page-property-list.html
+++ b/src/pa-page-property-list.html
@@ -122,7 +122,7 @@
         console.log('_subLog(', s, ',', JSON.stringify(v), ')');
       },
       _is: function(a, b) {
-        return a == b
+        return a === b
       },
       _isOther: function(a) {
         return a != 'toggle' && a!= 'dropdown'
