--- a/src/pa-page-resource.html
+++ b/src/pa-page-resource.html
@@ -125,7 +125,7 @@
           this.selectedTab = tab;
         }
       },
-      _log(v) {
+      _log: function(v) {
         console.log(v);
       }
 
