fixes some build warnings

--- a/src/pa-card.html
+++ b/src/pa-card.html
@@ -28,7 +28,7 @@
       }
     </style>
 
-    <a href="/resource/[[key]]/">
+    <a href$="/resource/[[key]]/">
       <paper-card heading="[[heading]]" image="[[image]]">
       </paper-card>
     </a>
