adds elements to bower.json

--- a/src/pa-list-item.html
+++ b/src/pa-list-item.html
@@ -18,7 +18,7 @@
         background: var(--paper-amber-500);
       }
     </style>
-    <a href="/resource/[[item.$key]]/">
+    <a href$="/resource/[[item.$key]]/">
       <paper-icon-item>
         <div class="avatar" item-icon></div>
         <paper-item-body two-line>
